# lockchain

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lockchain-install.sh
.github/scripts/: create-issues.sh  setup-labels.sh
.github/workflows/: build.yml  lint.yml  test.yml
crates/lockchain-cli/: Cargo.toml
crates/lockchain-cli/src/: main.rs  tui.rs
crates/lockchain-core/: Cargo.toml
crates/lockchain-core/src/: config.rs  error.rs  (+7 more)
crates/lockchain-daemon/: Cargo.toml
crates/lockchain-daemon/src/: main.rs
crates/lockchain-key-usb/: Cargo.toml
crates/lockchain-luks/: Cargo.toml
crates/lockchain-provider/: Cargo.toml
crates/lockchain-ui/: Cargo.toml
crates/lockchain-zfs/: Cargo.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  PROVIDERS.md  RELEASE.md  SECURITY.md  THREAT_MODEL.md  TROUBLESHOOTING.md  UI.md
docs/adr/: ADR-001-module-provider.md  ADR-002-tuning-self-heal.md  ADR-003-LUKS.md
docs/examples/: lockchain-luks.toml  lockchain-zfs.toml
packaging/: install-systemd.sh
packaging/debian/: postinst  prerm
packaging/dracut/: lockchain-cryptsetup-keys.conf  lockchain-cryptsetup-keys.service  lockchain-cryptsetup-keys.sh  lockchain-load-key.sh  lockchain-module-setup.sh  run-lockchain.mount
packaging/lockchain-deb/: Cargo.toml
packaging/scripts/: profile-unlock.sh
packaging/systemd/: lockchain-key-usb.service  lockchain-luks.service  lockchain-luks.toml  lockchain-luks@.service  lockchain-zfs.service  lockchain-zfs.toml  lockchain-zfs@.service  lockchain.service  lockchain.toml  lockchain@.service  run-lockchain.mount
(+44 files in other folders)
